test/corpus/literals.txt
================================================================================
nil
================================================================================
nil
--------------------------------------------------------------------------------

(expressions
  (nil))

================================================================================
bools
================================================================================
true
false
--------------------------------------------------------------------------------

(expressions
  (true)
  (false))

================================================================================
binary integers
================================================================================
0b0
-0b1_
+0b_0_1_
0b1_______u8
+0b0u16
0b0_0_0_0u32
+0b_111u64
-0b10_10_01_01u128
0bi8
-0b01010i16
+0b01101i32
0b1001_1101i64
-0b___i128
--------------------------------------------------------------------------------

(expressions
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer))

================================================================================
octal integers
================================================================================
0o0
-0o7_
+0o_2_6_
0o3_______u8
+0o1u16
0o0_1_2_3u32
+0o_777u64
-0o10_10_01_01u128
0oi8
-0o01_234i16
+0o01114i32
0o7036_1205i64
-0o___i128
--------------------------------------------------------------------------------

(expressions
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer))

================================================================================
decimal integers
================================================================================
0
-0
0_
0_0_0
+0_1_234_0
1
-1
+1___0
+9__________
9u8
+1_2_3u16
4____2u32
+1234567890u64
888_888_888u128
-7i8
+3_3i16
32i32
-123_456_789i64
+1_000_000_000_000i128
--------------------------------------------------------------------------------

(expressions
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer))

================================================================================
hex integers
================================================================================
0x0
+0x1
-0x__f__
0xu8
0xfFu16
+0x_dead_beef_u32
0x0123456789u64
0xAbC_dEfu128
0x42i8
-0x3f_ffi16
+0xi32
0x12341234i64
0xaabb_bbaa_abba_baabi128
--------------------------------------------------------------------------------

(expressions
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer))

================================================================================
floats
================================================================================
0.0
0.0000
+1_2.3_4
-1.1e1
0_2.00f64
+0.1E2f32
0_7e-07
3E
52f32
-2e+2f64
1_e_
--------------------------------------------------------------------------------

(expressions
  (float)
  (float)
  (float)
  (float)
  (float)
  (float)
  (float)
  (float)
  (float)
  (float)
  (float))

================================================================================
chars
================================================================================
'a'
'あ'
'"'
'🎅'

' '
'
'
''
'	'
'#'

'\0'
'\''
'\\'
'\a'
'\b'
'\e'
'\f'
'\n'
'\r'
'\t'
'\v'
'\u00aF'
'\u{0}'
'\u{20}'
'\u{abcd}'
'\u{aBcDe}'
'\u{10FFFF}'
--------------------------------------------------------------------------------

(expressions
  (char)
  (char)
  (char)
  (char)
  (char)
  (char)
  (char)
  (char)
  (char)
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence))
  (char
    (char_escape_sequence)))

================================================================================
strings
================================================================================
""
"_"
"# not a comment"
"🔮"
" 	
"

"\
"
"\\"
"\""
"\a"
"\b"
"\e"
"\f"
"\n"
"\r"
"\t"
"\v"

"\0"
"\42"
"\177"

"\x69"
"\xff"

"\u26a1"
"\u{1F52E}"
"\u{48 45 4C 4C 4F}"

"\'"
"\c"
"\?"
"\#"
--------------------------------------------------------------------------------

(expressions
  (string)
  (string)
  (string)
  (string)
  (string)
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (string_escape_sequence))
  (string
    (ignored_backslash))
  (string
    (ignored_backslash))
  (string
    (ignored_backslash))
  (string
    (ignored_backslash)))

================================================================================
string interpolation
================================================================================
"#"
"\#{"
"\#{}"

"#{2}"
"#{"#{"#{'a'}"}"}"

"hello, #{place.to_s}"

"#{a} + #{b} = #{a + b}"
--------------------------------------------------------------------------------

(expressions
  (string)
  (string
    (ignored_backslash))
  (string
    (ignored_backslash))
  (string
    (interpolation
      (integer)))
  (string
    (interpolation
      (string
        (interpolation
          (string
            (interpolation
              (char)))))))
  (string
    (interpolation
      (call
        receiver: (identifier)
        method: (identifier))))
  (string
    (interpolation
      (identifier))
    (interpolation
      (identifier))
    (interpolation
      (call
        receiver: (identifier)
        method: (operator)
        arguments: (argument_list
          (identifier))))))

================================================================================
nested interpolation stress test
================================================================================
%(#{
%(#{
%(#{
%(#{
%(#{
%(#{
%(#{
%(#{
%(#{
%(#{
%(#{
%(#{
%(#{
%(#{
  { {} of String => Int32, %(#{7}) }
}) +
%(#{
  { {} of String => Int32, Int32 -> Int32 => %(#{8}) }
}) +
%(#{
  { {} of String => Int32, %(#{
    { {} of String => Int32, %(#{7}) }
  })
  }
})
})
})
})
})
})
})
})
})
})
})
})
})
})

--------------------------------------------------------------------------------

(expressions
  (string
    (interpolation
      (string
        (interpolation
          (string
            (interpolation
              (string
                (interpolation
                  (string
                    (interpolation
                      (string
                        (interpolation
                          (string
                            (interpolation
                              (string
                                (interpolation
                                  (string
                                    (interpolation
                                      (string
                                        (interpolation
                                          (string
                                            (interpolation
                                              (string
                                                (interpolation
                                                  (string
                                                    (interpolation
                                                      (call
                                                        receiver: (call
                                                          receiver: (string
                                                            (interpolation
                                                              (tuple
                                                                (hash
                                                                  of_key: (constant)
                                                                  of_value: (constant))
                                                                (string
                                                                  (interpolation
                                                                    (integer))))))
                                                          method: (operator)
                                                          arguments: (argument_list
                                                            (string
                                                              (interpolation
                                                                (hash
                                                                  (hash_entry
                                                                    (hash
                                                                      of_key: (constant)
                                                                      of_value: (proc_type
                                                                        (constant)
                                                                        (constant)
                                                                        return: (constant)))
                                                                    (string
                                                                      (interpolation
                                                                        (integer)))))))))
                                                        method: (operator)
                                                        arguments: (argument_list
                                                          (string
                                                            (interpolation
                                                              (tuple
                                                                (hash
                                                                  of_key: (constant)
                                                                  of_value: (constant))
                                                                (string
                                                                  (interpolation
                                                                    (tuple
                                                                      (hash
                                                                        of_key: (constant)
                                                                        of_value: (constant))
                                                                      (string
                                                                        (interpolation
                                                                          (integer))))))))))))))))))))))))))))))))))))))

================================================================================
heredoc strings
================================================================================
puts 1, <<-C, 3
          1
  C

a,b,c,d = <<-a, <<-b, <<-c, <<-'😀嚤&÷🔮'
aaaa\na\ aa
a
bbbbb#{1}bbb
  #{2}
b
c
😀嚤&÷🔮

<<-'Quo ted!"'
  a\nb#{1}c
  'Quo ted!"'
  Quo ted!"
--------------------------------------------------------------------------------

(expressions
  (call
    method: (identifier)
    arguments: (argument_list
      (integer)
      (heredoc_start)
      (integer)))
  (heredoc_body
    (heredoc_content)
    (heredoc_end))
  (assign
    lhs: (identifier)
    lhs: (identifier)
    lhs: (identifier)
    lhs: (identifier)
    rhs: (heredoc_start)
    rhs: (heredoc_start)
    rhs: (heredoc_start)
    rhs: (heredoc_start))
  (heredoc_body
    (heredoc_content)
    (string_escape_sequence)
    (heredoc_content)
    (ignored_backslash)
    (heredoc_content)
    (heredoc_end))
  (heredoc_body
    (heredoc_content)
    (interpolation
      (integer))
    (heredoc_content)
    (interpolation
      (integer))
    (heredoc_content)
    (heredoc_end))
  (heredoc_body
    (heredoc_end))
  (heredoc_body
    (heredoc_end))
  (heredoc_start)
  (heredoc_body
    (heredoc_content)
    (heredoc_end)))

================================================================================
nested heredoc strings
================================================================================
# Nested heredocs aren't actually valid in interpolations, but that restriction
# is only on a semantic level. We can still parse this syntax just fine.

<<-A
1
#{
<<-E }
2
E
5
A

<<-B
1
#{<<-F + <<-G
2
F
3
G
}
5
B

p <<-A
1
#{[<<-BB, <<-CCC].reverse.join("")}4
3
BB
#{<<-E}
  #{<<-F
  2.5
  F
  }
2
E

CCC
5
A
--------------------------------------------------------------------------------

(expressions
  (comment)
  (comment)
  (heredoc_start)
  (heredoc_body
    (heredoc_content)
    (interpolation
      (heredoc_start))
    (heredoc_content)
    (heredoc_body
      (heredoc_content)
      (heredoc_end))
    (heredoc_content)
    (heredoc_end))
  (heredoc_start)
  (heredoc_body
    (heredoc_content)
    (interpolation
      (call
        receiver: (heredoc_start)
        method: (operator)
        arguments: (argument_list
          (heredoc_start)))
      (heredoc_body
        (heredoc_content)
        (heredoc_end))
      (heredoc_body
        (heredoc_content)
        (heredoc_end)))
    (heredoc_content)
    (heredoc_end))
  (call
    method: (identifier)
    arguments: (argument_list
      (heredoc_start)))
  (heredoc_body
    (heredoc_content)
    (interpolation
      (call
        receiver: (call
          receiver: (array
            (heredoc_start)
            (heredoc_start))
          method: (identifier))
        method: (identifier)
        arguments: (argument_list
          (string))))
    (heredoc_content)
    (heredoc_body
      (heredoc_content)
      (heredoc_end))
    (heredoc_content)
    (heredoc_body
      (interpolation
        (heredoc_start))
      (heredoc_content)
      (heredoc_body
        (interpolation
          (heredoc_start)
          (heredoc_body
            (heredoc_content)
            (heredoc_end)))
        (heredoc_content)
        (heredoc_end))
      (heredoc_content)
      (heredoc_end))
    (heredoc_content)
    (heredoc_end)))

================================================================================
heredoc encoding stress test
================================================================================
# This fills up the internal heredoc buffer to its max of 512 bytes
p <<-🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑🎧🕍👲💳🎷🎣🏇😠🔹🚶🎧, <<-'🐨🛡🚝💵a1;🈹☀️🖥🙉🎰🌕🌀🌷🔥🎽😮🤒🚈🏈🕋🍬↙️🐺📈🍓⚓️📚🔯😚🔂✔️🚅📆➿👚💖🚔🐮🎫😊📓🎮⚗🚦👙👹♥️🏢❤️📅👛🏳❗️🏯🏵🍁🐱🎭🤔🎚🍖', <<-🛀🚍📏🙉🍽🏰📡🙅🕰🖍🚭⛔️🌎🤔🏷🖊🔁🍮🤕🏙🛩🛍🔦👪😅🎎🐸📎😊📦🚃🎇📣⛰👒🌹👶🎄__
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑🎧
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑🎧🕍
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑🎧🕍👲
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑🎧🕍👲💳
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑🎧🕍👲💳🎷
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑🎧🕍👲💳🎷🎣
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑🎧🕍👲💳🎷🎣🏇
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑🎧🕍👲💳🎷🎣🏇😠
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑🎧🕍👲💳🎷🎣🏇😠🔹
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑🎧🕍👲💳🎷🎣🏇😠🔹🚶
Heredoc 1
🍑📣👑⚖🚨🌶🕟🔤😬☄🚣🎆🐛🌖🎑🎧🕍👲💳🎷🎣🏇😠🔹🚶🎧
Heredoc 2
🐨🛡🚝💵a1;🈹☀️🖥🙉🎰🌕🌀🌷🔥🎽😮🤒🚈🏈🕋🍬↙️🐺📈🍓⚓️📚🔯😚🔂✔️🚅📆➿👚💖🚔🐮🎫😊📓🎮⚗🚦👙👹♥️🏢❤️📅👛🏳❗️🏯🏵🍁🐱🎭🤔🎚🍖🍖🍖🍖🍖🍖🍖🍖
Heredoc 2
🐨🛡🚝💵a1;🈹☀️🖥🙉🎰🌕🌀🌷🔥🎽😮🤒🚈🏈🕋🍬↙️🐺📈🍓⚓️📚🔯😚🔂✔️🚅📆➿👚💖🚔🐮🎫😊📓🎮⚗🚦👙👹♥️🏢❤️📅👛🏳❗️🏯🏵🍁🐱🎭🤔🎚🍖🍖🍖🍖🍖🍖🍖
Heredoc 2
🐨🛡🚝💵a1;🈹☀️🖥🙉🎰🌕🌀🌷🔥🎽😮🤒🚈🏈🕋🍬↙️🐺📈🍓⚓️📚🔯😚🔂✔️🚅📆➿👚💖🚔🐮🎫😊📓🎮⚗🚦👙👹♥️🏢❤️📅👛🏳❗️🏯🏵🍁🐱🎭🤔🎚🍖🍖🍖🍖🍖🍖
Heredoc 2
🐨🛡🚝💵a1;🈹☀️🖥🙉🎰🌕🌀🌷🔥🎽😮🤒🚈🏈🕋🍬↙️🐺📈🍓⚓️📚🔯😚🔂✔️🚅📆➿👚💖🚔🐮🎫😊📓🎮⚗🚦👙👹♥️🏢❤️📅👛🏳❗️🏯🏵🍁🐱🎭🤔🎚🍖🍖🍖🍖🍖
Heredoc 2
🐨🛡🚝💵a1;🈹☀️🖥🙉🎰🌕🌀🌷🔥🎽😮🤒🚈🏈🕋🍬↙️🐺📈🍓⚓️📚🔯😚🔂✔️🚅📆➿👚💖🚔🐮🎫😊📓🎮⚗🚦👙👹♥️🏢❤️📅👛🏳❗️🏯🏵🍁🐱🎭🤔🎚🍖🍖🍖🍖
Heredoc 2
🐨🛡🚝💵a1;🈹☀️🖥🙉🎰🌕🌀🌷🔥🎽😮🤒🚈🏈🕋🍬↙️🐺📈🍓⚓️📚🔯😚🔂✔️🚅📆➿👚💖🚔🐮🎫😊📓🎮⚗🚦👙👹♥️🏢❤️📅👛🏳❗️🏯🏵🍁🐱🎭🤔🎚🍖🍖🍖
Heredoc 2
🐨🛡🚝💵a1;🈹☀️🖥🙉🎰🌕🌀🌷🔥🎽😮🤒🚈🏈🕋🍬↙️🐺📈🍓⚓️📚🔯😚🔂✔️🚅📆➿👚💖🚔🐮🎫😊📓🎮⚗🚦👙👹♥️🏢❤️📅👛🏳❗️🏯🏵🍁🐱🎭🤔🎚🍖🍖
Heredoc 2
🐨🛡🚝💵a1;🈹☀️🖥🙉🎰🌕🌀🌷🔥🎽😮🤒🚈🏈🕋🍬↙️🐺📈🍓⚓️📚🔯😚🔂✔️🚅📆➿👚💖🚔🐮🎫😊📓🎮⚗🚦👙👹♥️🏢❤️📅👛🏳❗️🏯🏵🍁🐱🎭🤔🎚🍖 
Heredoc 2
🐨🛡🚝💵a1;🈹☀️🖥🙉🎰🌕🌀🌷🔥🎽😮🤒🚈🏈🕋🍬↙️🐺📈🍓⚓️📚🔯😚🔂✔️🚅📆➿👚💖🚔🐮🎫😊📓🎮⚗🚦👙👹♥️🏢❤️📅👛🏳❗️🏯🏵🍁🐱🎭🤔🎚🍖
Heredoc 3
🛀🚍📏🙉🍽🏰📡🙅🕰🖍🚭⛔️🌎🤔🏷🖊🔁🍮🤕🏙🛩🛍🔦👪😅🎎🐸📎😊📦🚃🎇📣⛰👒🌹👶🎄__
--------------------------------------------------------------------------------
